fix: Mobile UI layout issues

--- a/src/components/sidebar/index.module.css
+++ b/src/components/sidebar/index.module.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
 
-  @apply fixed sm:relative bottom-0
+  /* @apply fixed sm:relative bottom-0 */
 }
 
 .icon {
